@@ -2505,8 +2505,10 @@ the plugin name does not begin with C<Catalyst::Plugin::>.
 
         my @plugins = map { s/\A\+// ? $_ : "Catalyst::Plugin::$_" } @$plugins;
         
-        Class::MOP::load_class($_) for @plugins;
-        
+        for my $plugin (@plugins) {
+            Class::MOP::load_class($plugin);
+        }
+
         for my $plugin ( reverse @plugins ) {
             my $meta = find_meta($plugin);
             next if $meta && $meta->isa('Moose::Meta::Role');
